<resources>
    <string name="app_name">Tron Wallet</string>
    <string name="name">TRON WALLET</string>
    <string name="title_create_wallet">Create Wallet</string>
    <string name="title_backup_account">Backup Account</string>
    <string name="title_login">Login</string>
    <string name="title_my_address">My Address</string>
    <string name="title_send_trc10_token">Send TRC-10 Token</string>
    <string name="title_send_trc20_token">Send TRC-20 Token</string>
    <string name="title_import_account">Import Account</string>
    <string name="title_vote_representative">Vote Representative</string>
    <string name="title_preview_wallet">Preview Wallet</string>
    <string name="title_more">More</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="navigation_header_title">Tron Wallet</string>
    <string name="navigation_menu_send_trc10_token">Send TRC-10 Token</string>
    <string name="navigation_menu_send_trc20_token">Send TRC-20 Token</string>
    <string name="address_text">Address</string>
    <string name="password_text">Password (must be at least 8)</string>
    <string name="private_key_text">Private Key</string>
    <string name="create_wallet_text">Create Wallet</string>
    <string name="copy_my_address">Copy My Address</string>
    <string name="create_confirm1">I understand that if I forget lose my password I will never be able to access my assets.</string>
    <string name="create_confirm2">I understand that if I forget lose my password no one will be able to help me recover it.</string>
    <string name="create_confirm3">I\'ve written my password on paper.</string>
    <string name="back_confirm1">I understand that if I forget lose my private key no one will be able to help me recover it.</string>
    <string name="copy_account_msg">Copied address and private key.</string>
    <string name="copy_address_msg">Copied address.</string>
    <string name="need_all_agree">You must agree to the terms of use.</string>
    <string name="login_text">Login</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="account_does_not_exist">Account does not exist. Create or import account.</string>
    <string name="login_success">Success login.</string>
    <string name="menu_address">Address</string>
    <string name="currency_text">TRX</string>
    <string name="price_text">USD</string>
    <string name="choice_share">Share Address</string>
    <string name="choice_share_account">Backup Account</string>
    <string name="choice_share_private_key">Export Private Key</string>
    <string name="menu_share">Share</string>
    <string name="vote_amount_text">Amount : </string>
    <string name="send_amount_text">Amount</string>
    <string name="send_trx_text">Send</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="sending_token_failed">Something went wrong while submitting the transaction</string>
    <string name="sending_token_success">Sending token success.</string>
    <string name="invalid_private_key">Invalid Private Key.</string>
    <string name="loading_msg">Please wait..</string>
    <string name="next_text">Next</string>
    <string name="password_error">Password must be at least 8.</string>
    <string name="backup_title">Warning</string>
    <string name="backup_msg">If you lose your private key, you will never be able to access your assets.\n(ex. uninstall tron wallet app or remove app data)\nAre you sure?</string>
    <string name="create_account_backup_msg">If you lose your private key, you will never be able to access your assets.\n(ex. uninstall tron wallet app or remove app data).\nPlease backup your private key\nMy Account > export private key</string>
    <string name="cancel_text">Cancel</string>
    <string name="register_wallet_error">Can not register wallet. Please try again.</string>
    <string name="copy_wallet_info">Copy Wallet Info</string>
    <string name="navigation_menu_my_address">My Address</string>
    <string name="tron_price_title">Tron Price</string>
    <string name="navigation_menu_donations">Donations</string>
    <string name="navigation_menu_more">More</string>
    <string name="menu_tron_pay">Tron Pay</string>
    <string name="menu_request_token">Request Token</string>
    <string name="menu_send_token">Send Token</string>
    <string name="request_token_text">Amount</string>
    <string name="gen_qrcode_text">Generate QR CODE</string>
    <string name="title_request_token">Request Token</string>
    <string name="node_list">Nodes</string>
    <string name="representative_list">Representatives</string>
    <string name="rich_account_list">Rich Account List</string>
    <string name="open_source_text">Open Source</string>
    <string name="feedback_text">Question &amp; Feedback</string>
    <string name="my_tokens">My Tokens</string>
    <string name="no_tokens">No Tokens</string>
    <string name="get_token_text">Get Token</string>
    <string name="title_about_tron">About Tron</string>
    <string name="title_markets">Markets</string>
    <string name="title_rename_account">Rename</string>
    <string name="menu_create_account">Create Account</string>
    <string name="menu_import_account">Import Account</string>
    <string name="menu_refresh_account">Refresh</string>
    <string name="rename_account_hint">Input account name</string>
    <string name="about_tron">About Tron</string>
    <string name="title_open_source">Open Source</string>
    <string name="title_donations">Donations</string>
    <string name="confirm_text">Confirm</string>
    <string name="send_token_title">Send Token</string>
    <string name="send_token_warning_msg">Only enter valid TRON wallet address. Incorrect addresses can lead to token loss.</string>
    <string name="send_token_address_text">Address : </string>
    <string name="send_token_token_text">Token : </string>
    <string name="send_token_amount_text">Amount : </string>
    <string name="title_create_account">New Account</string>
    <string name="navigation_menu_logout">Logout</string>
    <string name="import_account_hint">Your private key string here</string>
    <string name="already_exist_account">Account is already exist.</string>
    <string name="title_export_private_key">Export Private Key</string>
    <string name="input_password_text">Password</string>
    <string name="connection_error_msg">Could not connect tron network. Please try again.</string>
    <string name="title_representative_list">Representatives</string>
    <string name="title_node_list">Node list</string>
    <string name="title_tron_account_list">Tron Accounts</string>
    <string name="vote_text">Vote</string>
    <string name="latest_block_text">Latest Block</string>
    <string name="produced_block_text">Produced Blocks</string>
    <string name="missed_block_text">Missed Blocks</string>
    <string name="votes_text">Votes :</string>
    <string name="representative_count_text">Representatives :</string>
    <string name="vote_representative_count_text">Representatives</string>
    <string name="highest_votes_text">Highest Votes :</string>
    <string name="account_count_text">Account :</string>
    <string name="highest_trx_text">Highest :</string>
    <string name="balance_text">Balance</string>
    <string name="menu_transfer_history">Transfer History</string>
    <string name="camera_error_msg">Can\'t access to camera.</string>
    <string name="navigation_menu_vote">Vote Representative</string>
    <string name="vote_representative_warning_msg">Are you sure vote representative?</string>
    <string name="vote_representative_name_text">Name : </string>
    <string name="vote_representative_amount_text">Amount : </string>
    <string name="productivity_text">Productivity</string>
    <string name="frozen_trx">FROZEN TRX</string>
    <string name="markets_text">Markets</string>
    <string name="title_transfer_text">Transfers</string>
    <string name="navigation_menu_my_account">My Account</string>
    <string name="title_my_account">My Account</string>
    <string name="my_account_address_text">Address :</string>
    <string name="account_text">Account</string>
    <string name="tokens_text">Tokens</string>
    <string name="frozen_trx_text">Frozen TRX</string>
    <string name="unfreeze_text">UNFREEZE</string>
    <string name="freeze_text">FREEZE</string>
    <string name="my_account_balance_text">Balance :</string>
    <string name="copy_address_text">Copy Address</string>
    <string name="export_private_key_text">Export Private Key</string>
    <string name="title_freeze_trx">Freeze TRX</string>
    <string name="title_unfreeze_trx">Unfreeze TRX</string>
    <string name="input_amount_text">Amount</string>
    <string name="freeze_confirm_text">I confirm to freeze TRX for at least of 3 days</string>
    <string name="donations_text">Donations</string>
    <string name="bandwidth_text">BANDWIDTH</string>
    <string name="tron_power_text">TRON POWER</string>
    <string name="current_balance_text">CURRENT BALANCE</string>
    <string name="unable_to_unfreeze_msg">Unable to unfreeze TRX. This could be caused because the minimal freeze period hasn\'t been reached yet.</string>
    <string name="my_account_tron_power_text">Tron Power</string>
    <string name="team_page_text">Team Page</string>
    <string name="my_votes_text">Show only my votes</string>
    <string name="title_vote">Votes</string>
    <string name="total_votes_text">Total votes</string>
    <string name="representative_your_vote_text">Your vote :</string>
    <string name="representative_total_votes_text">Total votes :</string>
    <string name="input_vote_text">Vote</string>
    <string name="vote_confirm_text">I confirm to vote</string>
    <string name="url_text">URL :</string>
    <string name="vote_address_text">Address :</string>
    <string name="input_port_text">Port</string>
    <string name="input_host_text">Host</string>
    <string name="use_text">USE</string>
    <string name="hash_id_text">Id :</string>
    <string name="status_text">Status :</string>
    <string name="block_text">Block :</string>
    <string name="transfer_send_text">Send :</string>
    <string name="transfer_to_text">To :</string>
    <string name="transfer_amount_text">Amount :</string>
    <string name="transfer_date_text">Date :</string>
    <string name="participate_btn_text">PARTICIPATE</string>
    <string name="bottom_navigation_menu_overview">Overview</string>
    <string name="bottom_navigation_menu_block">Blocks</string>
    <string name="bottom_navigation_menu_transactions">Transactions</string>
    <string name="bottom_navigation_menu_transfers">Transfers</string>
    <string name="bottom_navigation_menu_account">Accounts</string>
    <string name="bottom_navigation_menu_tokens">Tokens</string>
    <string name="bottom_navigation_menu_representative">Representative</string>
    <string name="participate_token_msg">Please input amount.</string>
    <string name="token_price_text">Price :</string>
    <string name="participate_confirm_text">I confirm to buy tokens</string>
    <string name="your_trx_text">Your trx :</string>
    <string name="remove_account_text">REMOVE ACCOUNT</string>
    <string name="remove_account_warning_msg">Unexpected bad things will happen if you don’t read this!</string>
    <string name="remove_account_remind_msg">This action cannot be undone. This will permanently delete the account. Please type in the name of the account to confirm.</string>
    <string name="account_name_text">Account Name</string>
    <string name="trc_20_contract_address">TRC-20 Contract Address</string>
    <string name="trc_20_contract_precision">Precision</string>
    <string name="add_trc_20_contract">Add Token</string>
    <string name="trc_20_name">name</string>
    <string name="trc_20_symbol">symbol</string>
</resources>