<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_overview"
        android:icon="@drawable/ic_overview"
        android:title="@string/bottom_navigation_menu_overview" />

    <item
        android:id="@+id/bottom_navigation_tokens"
        android:icon="@drawable/ic_token"
        android:title="@string/bottom_navigation_menu_tokens" />

    <item
        android:id="@+id/bottom_navigation_transaction"
        android:icon="@drawable/ic_transaction"
        android:title="@string/bottom_navigation_menu_transfers" />

    <item
        android:id="@+id/bottom_navigation_representative"
        android:icon="@drawable/ic_thumb"
        android:title="@string/bottom_navigation_menu_representative" />
</menu>
