<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_trc_20_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trc_20_name"
            android:textColor="@android:color/black"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_trc_20_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trc_20_symbol"
            android:textColor="@android:color/black"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_trc_20_contract_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trc_20_contract_address"
            android:textColor="@android:color/black"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_trc_20_contract_precision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trc_20_contract_precision"
            android:textColor="@android:color/black"
            android:inputType="numberSigned" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add_trc_20_contract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/add_trc_20_contract" />
</LinearLayout>